# k-Wave-CPUGPU-macOS

./: .gitattributes  .gitignore  README.md
acousticFieldPropagator-OMP/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  main.cpp
acousticFieldPropagator-OMP/CMakeModules/: FindFFTW3f.cmake  FindIMKL.cmake
acousticFieldPropagator-OMP/Data/: input_data_96_64_64.h5
acousticFieldPropagator-OMP/Hdf5Io/: Hdf5Dataset.cpp  Hdf5Dataset.h  Hdf5Datatype.cpp  Hdf5Datatype.h  Hdf5Error.cpp  Hdf5Error.h  Hdf5File.h  Hdf5Id.h  Hdf5Io.cpp  Hdf5Io.h  Hdf5MemSpace.h  Hdf5StringAttribute.cpp  Hdf5StringAttribute.h
acousticFieldPropagator-OMP/Kernels/: Kernels.cpp  Kernels.h
acousticFieldPropagator-OMP/Types/: AlignedArray.h  ArrayBuffer.h  FftMatrix.h  FftMatrixFftwf.cpp  FftMatrixMkl.cpp  Parameters.h  TypedTuple.h
acousticFieldPropagator-OMP/Utils/: ArgumentParser.cpp  ArgumentParser.h  Hostname.h  HostnameLin.cpp  HostnameWin.cpp  Memory.h  MemoryLin.cpp  MemoryWin.cpp  Stopwatch.h  Terminal.h  TerminalUtils.h
acousticFieldPropagator-OMP/Version/: CMakeLists.txt  Version.cpp.in  Version.h
kspaceFirstOrder-CUDA/: Changelog.md  Doxyfile  License.md  Makefile  Readme.md  main.cpp
kspaceFirstOrder-CUDA/Containers/: CudaMatrixContainer.cu  CudaMatrixContainer.cuh  MatrixContainer.cpp  MatrixContainer.h  MatrixRecord.h  OutputStreamContainer.cpp  OutputStreamContainer.h
kspaceFirstOrder-CUDA/GetoptWin64/: Getopt.cpp  Getopt.h
kspaceFirstOrder-CUDA/Hdf5/: Hdf5File.cpp  Hdf5File.h  Hdf5FileHeader.cpp  Hdf5FileHeader.h
kspaceFirstOrder-CUDA/KSpaceSolver/: KSpaceFirstOrderSolver.cpp  KSpaceFirstOrderSolver.h  SolverCudaKernels.cu  SolverCudaKernels.cuh
kspaceFirstOrder-CUDA/Logger/: ErrorMessages.h  ErrorMessagesLinux.h  ErrorMessagesWindows.h  Logger.cpp  Logger.h  OutputMessages.h  OutputMessagesLinux.h  OutputMessagesWindows.h
kspaceFirstOrder-CUDA/MatrixClasses/: BaseFloatMatrix.cpp  BaseFloatMatrix.h  BaseIndexMatrix.cpp  BaseIndexMatrix.h  BaseMatrix.h  ComplexMatrix.cpp  ComplexMatrix.h  CufftComplexMatrix.cpp  CufftComplexMatrix.h  IndexMatrix.cpp  IndexMatrix.h  RealMatrix.cpp  RealMatrix.h  TransposeCudaKernels.cu  TransposeCudaKernels.cuh
kspaceFirstOrder-CUDA/OutputStreams/: BaseOutputStream.cpp  BaseOutputStream.h  CuboidOutputStream.cpp  CuboidOutputStream.h  IndexOutputStream.cpp  IndexOutputStream.h  OutputStreamsCudaKernels.cu  OutputStreamsCudaKernels.cuh  WholeDomainOutputStream.cpp  WholeDomainOutputStream.h
kspaceFirstOrder-CUDA/Parameters/: CommandLineParameters.cpp  CommandLineParameters.h  CudaDeviceConstants.cu  CudaDeviceConstants.cuh  CudaParameters.cpp  CudaParameters.h  Parameters.cpp  Parameters.h
kspaceFirstOrder-CUDA/Utils/: CudaUtils.cuh  DimensionSizes.h  TimeMeasure.h
kspaceFirstOrder-OMP/: Changelog.md  Doxyfile  Makefile  Readme.md  main.cpp
kspaceFirstOrder-OMP/Containers/: MatrixContainer.cpp  MatrixContainer.h  MatrixRecord.h  OutputStreamContainer.cpp  OutputStreamContainer.h
kspaceFirstOrder-OMP/GetoptWin64/: Getopt.cpp  Getopt.h
kspaceFirstOrder-OMP/Hdf5/: Hdf5File.cpp  Hdf5File.h  Hdf5FileHeader.cpp  Hdf5FileHeader.h
kspaceFirstOrder-OMP/KSpaceSolver/: KSpaceFirstOrderSolver.cpp  KSpaceFirstOrderSolver.h
kspaceFirstOrder-OMP/Logger/: ErrorMessages.h  ErrorMessagesLinux.h  ErrorMessagesWindows.h  Logger.cpp  Logger.h  OutputMessages.h  OutputMessagesLinux.h  OutputMessagesWindows.h
kspaceFirstOrder-OMP/MatrixClasses/: BaseFloatMatrix.cpp  BaseFloatMatrix.h  BaseIndexMatrix.cpp  BaseIndexMatrix.h  BaseMatrix.h  ComplexMatrix.cpp  ComplexMatrix.h  FftwComplexMatrix.cpp  FftwComplexMatrix.h  FftwRealMatrix.cpp  FftwRealMatrix.h  IndexMatrix.cpp  IndexMatrix.h  RealMatrix.cpp  RealMatrix.h
kspaceFirstOrder-OMP/OutputStreams/: BaseOutputStream.cpp  BaseOutputStream.h  CuboidOutputStream.cpp  CuboidOutputStream.h  IndexOutputStream.cpp  IndexOutputStream.h  WholeDomainOutputStream.cpp  WholeDomainOutputStream.h
kspaceFirstOrder-OMP/Parameters/: CommandLineParameters.cpp  CommandLineParameters.h  Parameters.cpp  Parameters.h
kspaceFirstOrder-OMP/Utils/: DimensionSizes.h  TimeMeasure.h
